 expose-connections.bsv    Locally Modified          119 
 connect-top-level-multifpga.bsv Locally Modified          119 


Some major changes to the build pipeline.  Most of these changes are created by a desire to simplify dependency calculation for synthesis boundaries in SCons.  MultiFPGA has been using this style of build for about a month, and this could be considered a back port.

1) wrapper generation moved to build pipeline.  two wrapers are built,
one with static and one with dynamic sizing.

2) stub file spamming.  Synthesis boundaries used to only work if the
boundary was instantiated by its parent in the module hierarchy.  Now
they can be instantiated anywhere. We also differentiate this stub and
the wrapper file by adding a _compile string to the name of the
wrapper.  This helps avoid confusion in SCons.


----------
kfleming    Date: Wed Jun 29 12:41:02 EDT 2011  CSN: CSN-leap-121
                  Wed Jun 29 16:41:02 UTC 2011


Directory modules/leap/build-support/build-pipelines/stages/iface
 iface.py                  Locally Modified          120 

Directory modules/leap/build-support/build-pipelines/pipelines/verilog
 VerilogPipeline.py        Locally Modified          120 

Directory modules/leap/build-support/build-pipelines/pipelines/fpga
 FPGAPipeline.py           Locally Modified          120 


Fixed obvious naming bugs in non-simulation pipelines

----------
kfleming    Date: Wed Jun 29 16:47:39 EDT 2011  CSN: CSN-leap-122
                  Wed Jun 29 20:47:39 UTC 2011


Directory modules/leap/build-support/build-pipelines/stages/multifpga
 tool.py                   Locally Modified          121 

Directory modules/leap/build-support/project
 SCons.top.pipeline.template Locally Modified          121 
 ModuleList.py             Locally Modified          121 


Changed initialization for ModuleList to accept module hierarchy as a seperate argument.  This is useful when creating ModuleList during compilation.